# Communication

./: LICENSE  README.md  local.properties
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/forrest/communication/: Camera2BasicFragment.java
app/src/main/java/com/forrest/encoder/: MediaEncoderHandler.java  MediaSurfaceEncoder.java
app/src/main/java/com/forrest/gles/: Rectangle.java
app/src/main/java/com/forrest/jrtplib/: JrtplibUtil.java
app/src/main/java/com/forrest/ui/: CameraGLSurfaceView.java  PreviewGLSurfaceView.java
app/src/main/jni/AnsyncDecoder/: AnsyncDecoder.c
app/src/main/res/layout/: fragment_camera2_basic.xml
gradle/wrapper/: gradle-wrapper.properties
